# fum

./: Cargo.toml  Privacy-Policy.html  Privacy-Policy.md  README.md  index.html
src/: action.rs  cli.rs  fum.rs  main.rs  meta.rs  state.rs  ui.rs  youtube.rs
src/config/: config.rs  defaults.rs
src/widget/: widget.rs
