[package]
name = "fum-player"
description = "A tui-based mpris youtubemusic client."
version = "0.8.0"
repository = "https://github.com/ArnoDarkrose/fum"
homepage = "https://github.com/ArnoDarkrose/fum"
license = "MIT"
edition = "2021"

[[bin]]
name = "fum"
path = "./src/main.rs"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
bytemuck = "1.21.0"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
expanduser = "1.2.2"
image = "0.25.5"
lazy_static = "1.5.0"
mpris = "2.0.1"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
ratatui-image = { version = "4.1.0", features = ["crossterm"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-tracing = "0.5.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
webbrowser = "1.0.3"

